--- a/src/stories/page.css
+++ b/src/stories/page.css
@@ -22,8 +22,8 @@
 }
 
 .storybook-page a {
-  text-decoration: none;
-  color: #1ea7fd;
+  text-decoration: underline;
+  color: #0d47a1;
 }
 
 .storybook-page ul {
@@ -42,7 +42,7 @@
   line-height: 12px;
   font-weight: 700;
   background: #e7fdd8;
-  color: #66bf3c;
+  color: #00695c;
   padding: 4px 12px;
   margin-right: 10px;
   vertical-align: top;
